cmake_minimum_required(VERSION 3.3)
project(untitled15)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
                    main.cpp
                My.cpp
             My.h
        My2.cpз
    My2.h
    )

add_executable(
  untitled 15
  ${SOURCE_FILES}
)

while(аа
  рор
  тти
      )
#[[ ]]

set(
  c;
    t;
    y;ulul;u;u
    u;
    uuuu;
    )